resources/assets/stylesheets/scss/index.scss
body {
    min-height: 100%;
}

$login-page-margin: 50px;
$gap-between-boxes: calc($login-page-margin / 2);

#content {
    grid-column: 1 / 3;
    grid-row: 2 / 2;

    &.loginpage {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        column-gap: 20px;
        row-gap: 20px;
        align-items: flex-start;
        flex-basis: 450px;
        height: 100%;
    }
}

#background-desktop {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
}

#background-mobile {
    display: none;
    z-index: -1;
}

#index #content {
    padding: $login-page-margin;
}

#login_flex {
    display: flex;
    flex-direction: row;
    column-gap: 20px;
    flex-wrap: wrap;
    row-gap: 20px;
    align-items: flex-start;
}

#login-wrapper {
    margin: auto;
    display: flex;
    flex-direction: column;
    position: relative;
    top: -100px;
}

#login-content-wrapper {
    position: relative;
    min-height: 540px;
    display: flex;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
    margin-top: 100px;

    #login-infobox {
        max-width: 540px;
        min-width: 540px;
        height: auto;
        padding: 32px 64px 32px 32px;
        background-color: rgba(255, 255, 255, 0.8);
        color: var(--black);
        position: relative;

        &.hide {
            display: none;
        }

        &.no-toggle {
            padding: 32px;
        }

        #login-infobox-button-wrapper {
            position: absolute;
            right: 24px;
            top: 32px;
            gap: 4px;
            display: flex;
            flex-direction: column;
            background-color: var(--white);

            button {
                border: none;
                background-color: transparent;
                cursor: pointer;
                padding: 4px 4px 4px 8px;
                border-left: solid 4px var(--white);

                &.selected {
                    border-color: var(--base-color);
                }

                &:hover:not(.selected) {
                    border-color: var(--content-color);
                }
            }
        }
    }
}

#login-faq-box {
    background-color: var(--white);
    padding: 8px 16px 8px 32px;
    height: calc(100% - 16px);
    position: relative;
    overflow-y: auto;

    &.hidden {
        display: none;
    }

    #login-faq-content-wrapper {
        height: calc(100% - 32px);
        max-height: 430px;
    }

    .login-box-header {
        h2 {
            margin-bottom: 20px;
            margin-left: 0.5ex;
        }
    }

    .login-faq-content {
        overflow-y: auto;
        padding-right: 16px;
        height: calc(100% - 64px);

        article.studip {
            margin-bottom: 1.5ex;
        }
    }
}

#login-news-box {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-between;

    &.hidden {
        display: none;
    }

    #login-news-content-wrapper {
        height: calc(100% - 60px);
        flex-grow: 1;
        background-color: var(--white);
        padding: 8px 16px 8px 32px;
        margin-bottom: 16px;
        position: relative;

        #show-faq {
            position: absolute;
            top: 16px;
            right: 16px;
            border: none;
            background-color: transparent;
            text-align: right;
            cursor: pointer;
        }
    }

    .login-news {
        height: 100%;
        visibility: visible;
        .hidden {
            visibility: hidden;
            height: 0;
        }

        .login-news-details {
            max-height: 340px;
            overflow-y: auto;
            margin: 0 0 16px 0;
            padding-right: 16px;
        }
    }

    #login-news-nav {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin: 0 64px;
        height: 36px;

        .login-news-nav {
            margin-left: 8px;
            width: 48px;
            height: 48px;
            border: none;
            @include background-icon('bullet-dot', $size: 28px);
            background-repeat: no-repeat;
            background-color: transparent;
            background-position: center;
            cursor: pointer;

            &.active-news-bullet {
                background-size: 42px;
            }
        }
    }
}

#loginbox {
    display: flex;
    flex-direction: column;
    align-content: space-between;
    background-color: var(--white);
    padding: 32px;
    min-width: 340px;
    width: 340px;
    height: 100%;
    min-height: 480px;

    header h1 {
        margin: 32px 0;
        text-align: center;
    }

    .login-message {
        display: flex;
        margin: 0 32px 16px 32px;
        &#login-error {
            background-color: var(--red-20);
        }

        &#logout-info {
            background-color: var(--base-color-20);
        }

        img {
            height: calc(100% - 8px);
            padding: 4px 8px;
        }

        .login-message-content {
            padding: 8px;

            p {
                margin: 0;
            }
        }
    }

    form#login-form {
        margin: 0;
        padding: 0 32px;
        border-top: none;
        border-bottom: solid thin var(--content-color-40);



        &.login-bottom {
            border-top: solid thin var(--content-color-40);
            border-bottom: none;
            padding-top: 20px;
            max-height: 180px;
            overflow: hidden;
            clip-path: inset(0 0 0 0);
            transition: clip-path var(--transition-duration) ease-out, visibility var(--transition-duration) ease-in-out;

            &.hide {
                clip-path: inset(0 0 100% 0);
                visibility: hidden;
            }
        }

        section {
            padding-top: 0;

            input {
                margin-top: 0;
            }
        }

        label {
            display: inline-block;
            min-width: 100%;
            text-indent: 0;

            &.with-tooltip {
                min-width: calc(100% - 24px);
            }
        }

        .tooltip {
            line-height: 36px;
            margin-left: 4px;
        }

        .login-button-wrapper {
            margin: 1em 0;

            button {
                width: 100%;
                font-weight: 700;
            }
        }
    }

    nav {
        margin: 1em;
        padding: 0 16px;
        text-align: center;
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;

        a {
            display: block;
            margin: 0 auto;
            padding: 4px 8px;
            width: 100%;
            text-align: left;
            color: var(--base-color);

            .title {
                font-size: $font-size-h1;
                font-weight: normal;
                margin: 0 0 4px;
            }
            .description {
                font-size: $font-size-small;
                max-width: 75%;
                white-space: collapse;
                color: var(--color--font-primary);
            }

            &:hover {
                color: var(--active-color);
            }

            &.link-registration {
                margin-top: 1em;
            }
        }

        &.login-bottom {
            justify-content: flex-start;
            margin: 0 1em 1em 1em;
        }
    }

    footer {
        border-top: solid thin #ccc;
        padding-top: 1em;
        margin-top: 1em;
    }

    input#loginname,
    input#password {
        display: initial;
    }

    input#password {
        padding-right: 28px;
    }

    #password-toggle {
        position: absolute;
        right: 7px;
        bottom: 0;
        cursor: pointer;
    }
}

#faq_box {
    background-color: var(--white);
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
    padding: 20px;
    width: 450px;
    float: left;
}

#index,
#login {
    #current-page-structure {
        display: none;
    }

    .messagebox {
        margin-bottom: $gap-between-boxes;
        width: 418px;
    }
}

::-ms-reveal {
    display: none;
}

#top-bar {
    #language-selector {
        margin-right: 4px;
    }
}

#header-links {
    #contrast {
        margin-left: 4px;

        button.as-link {
            color: var(--white);
            line-height: 28px;
            &:hover {
                text-decoration: underline;
            }
        }
        img {
            vertical-align: middle;
        }
    }
}

/* * * * * * * * * *
responsive settings
* * * * * * * * * */
html:not(.size-large) {
    #login-wrapper {
        margin: 0 auto;
        top: 0;

        &.with-infobox {
            width: 100%;
        }

        #login-content-wrapper {
            margin-top: 0;
            #login-infobox {
                max-width: unset;
                min-width: unset;
                flex-grow: 1;
            }
        }
    }
}
html:not(.size-medium) {
    &.responsive-display {
        body#login {
            #content-wrapper {
                margin: 0;
                padding: 0;
                width: 100%;
            }
        }

        body:not(#login) {
            #content-wrapper {
                padding: 15px;
            }
        }
    }
    #login-wrapper {
        margin: 0;
        width: 100%;

        #login-content-wrapper {
            height: unset;
            min-height: unset;
            margin-top: 0;
            flex-wrap: wrap;

            #loginbox {
                min-width: unset;
                width: unset;
                min-height: unset;
                flex-grow: 1;
                padding: 16px;
            }

            #login-infobox {
                width: calc(100% - 128px);
                padding: 16px 56px 16px 16px;
                &.no-toggle {
                    width: 100%;
                    padding: 16px 0 0 0;
                }
                #login-infobox-button-wrapper {
                    top: 16px;
                    right: 16px;
                }
                #login-faq-box {
                    height: unset;

                    #login-faq-content-wrapper {
                        max-height: unset;
                    }
                }

            }
        }
    }
}

